<resources>
    <string name="app_name">Dynamic</string>
    <string name="jabong">JABONG</string>
    <string name="h_m"><![CDATA[H & M]]></string>
    <string name="amazon">AMAZON</string>
    <string name="flipkart">FLIPKART</string>
    <string name="nykaa">NYKAA</string>
    <string name="club_factory">CLUB FACTORY</string>
    <string name="shopping">SHOPPING</string>
    <string name="myntra">MYNTRA</string>
    <string name="ajio">AJIO</string>
    <string name="shopclues">SHOPCLUES</string>
    <string name="banggood">BANGGOOD</string>
    <string name="snapdeal">SNAPDEAL</string>
    <string name="koovs">KOOVS</string>
    <string name="ebay">EBAY</string>
    <string name="wish">WISH</string>
    <string name="limeroad">LIMEROAD</string>
    <string name="vajor">vajor</string>
</resources>
