<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/alert_dark_frame"
    tools:context=".MainActivity">




    <Button
        android:id="@+id/b1"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/amazon"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b2"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b1"
        android:text="@string/flipkart"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b3"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b2"
        android:text="@string/nykaa"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b4"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b3"
        android:text="@string/club_factory"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="302dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/shopping"
        android:textColor="?attr/colorControlActivated"
        android:textSize="18sp"
        android:typeface="serif"
        app:fontFamily="cursive" />

    <Button
        android:id="@+id/b5"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b4"
        android:text="@string/jabong"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b6"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b5"
        android:text="@string/myntra"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b7"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b6"
        android:text="@string/ajio"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/b8"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/b7"
        android:text="@string/snapdeal" />

    <Button
        android:id="@+id/b9"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/b1"
        android:text="@string/shopclues"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/b10"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b9"
        android:layout_alignStart="@+id/b9"
        android:layout_below="@+id/b1"
        android:text="@string/koovs" />

    <Button
        android:id="@+id/b11"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/b2"
        android:text="@string/banggood"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/b12"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b11"
        android:layout_centerVertical="true"
        android:text="@string/vajor" />

    <Button
        android:id="@+id/b13"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b4"
        android:text="@string/ebay" />

    <Button
        android:id="@+id/b14"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b5"
        android:text="@string/limeroad" />

    <Button
        android:id="@+id/b15"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b6"
        android:text="@string/h_m" />

    <Button
        android:id="@+id/b16"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/b7"
        android:text="@string/wish" />

</RelativeLayout>